--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
 }
 
 .container {
-    max-width: 1280px;
+    max-width: 1380px;
     margin: 0 auto;
     padding: 0 15px;
 }
@@ -36,4 +36,25 @@ span {
     .heading {
         @apply md:text-5xl text-3xl text-center pb-1  font-medium text-dark;
     }
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+    display: none;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #eae7e7;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
